--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,7 @@ scikit-learn==1.3.0
 numpy==1.25.2
 pytest==7.4.0
 SQLAlchemy==2.0.20
-aiohttp==3.8.5 
+aiohttp==3.8.5
+rapidfuzz==1.10.0
+requests==2.32.3
+urllib3==2.4.0
